# PMD-Inv

./: .env.example  .gitignore  .vercelignore  README.md  package.json  pnpm-lock.yaml  turbo.json  vercel.json
apps/api/: .env.example  .vercelignore  package.json  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/routers/: activity.py  assignments.py  corrections.py  costs.py  cron.py  dashboard.py  equipment.py  handoff.py  health.py  maintenance.py  messages.py  movements.py  notifications.py  operations.py  patients.py  profiles.py  returns.py  search.py  service_tickets.py  warehouse.py
apps/api/app/core/: auth.py  settings.py
apps/api/app/db/: supabase.py
apps/api/app/repositories/: base.py  equipment.py  simple.py
apps/api/app/schemas/: common.py  corrections.py  costs.py  equipment.py  handoff.py  maintenance.py  messages.py  movements.py  operations.py  patient.py  profile.py  workflows.py
apps/api/app/services/: audit.py  movements.py  workflows.py
apps/api/pmdinv_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_corrections.py  test_equipment_repository.py  test_messages.py  test_movement_patient_assignment.py  test_patient_delete.py  test_patient_notes.py  test_workflow_rules.py
docs/: admin-corrections.md  architecture.md  deployment.md  ios-app-foundation.md  ios-build-log.md  ios-install-guide.md  notifications-cron.md  operations-expansion.md  post-migration-checklist.md  setup.md  staff-auth.md  warehouse-and-rebalancing.md  workflows.md
supabase/: 001a0_types_only_dashboard.sql  (+20 more)
(+167 files in other folders)
